k8s/auth-db-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-db
  namespace: stox
  labels:
    app: auth-db
spec:
  serviceName: "auth-db"
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      serviceAccountName: auth-service-account 
      securityContext:
        fsGroup: 999
      containers:
      - name: auth-db
        image: auth-db:latest
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 999
          runAsGroup: 999
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: auth-db
        livenessProbe:
          exec:
            command:
            - "/bin/sh"
            - "-c"
            - "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
          initialDelaySeconds: 30
          periodSeconds: 30
        readinessProbe:
          exec:
            command:
            - "/bin/sh"
            - "-c"
            - "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"
          initialDelaySeconds: 30
          periodSeconds: 30
      volumes:
      - name: auth-db
        persistentVolumeClaim:
          claimName: auth-db-pvc
