k8s/auth-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-db
  namespace: stox
  labels:
    app: auth-db
spec:
  selector:
    app: auth-db
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
  clusterIP: None # Headless service for direct communication
